Fix some compatibility stuff and spacing

--- a/themes/stepmania/css/style.css
+++ b/themes/stepmania/css/style.css
@@ -324,7 +324,10 @@ footer p {
   background: -webkit-linear-gradient(top, #f6f3e5, #efebd2 50px);
   height: 3em;
   padding: 14px;
-  display: -webkit-flex;
+  display: -webkit-box-flex;
+  display: -webkit-flexbox;
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex; }
   .forum-subforum:last-child {
     border-bottom-left-radius: 3.5px;
@@ -340,20 +343,26 @@ footer p {
     padding: 0 14px; }
 
 .forum-flex {
-  display: -webkit-flex;
+  display: -webkit-box-flex;
+  display: -webkit-flexbox;
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex; }
 
 .forum-flex-left {
   -webkit-flex: 1 0 0;
+  -ms-flex: 1 0 0;
   flex: 1 0 0; }
 
 .forum-flex-mid {
   -webkit-flex: 1 0 0;
+  -ms-flex: 1 0 0;
   flex: 1 0 0;
   max-width: 150px; }
 
 .forum-flex-right {
   -webkit-flex: 1 0 0;
+  -ms-flex: 1 0 0;
   flex: 1 0 0;
   max-width: 250px; }
 
@@ -486,7 +495,7 @@ footer p {
       display: block; }
 
 .forum-post {
-  margin-bottom: 3.5px;
+  margin-bottom: 4px;
   vertical-align: top;
   border-radius: 3.5px;
   box-shadow: 0 2px 1px rgba(0, 0, 0, 0.25); }
@@ -498,6 +507,7 @@ footer p {
     border-right: 1px solid #ebe4bd;
     overflow: hidden;
     -webkit-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
     flex: 0 0 auto;
     vertical-align: top;
     width: 150px;
@@ -609,18 +619,23 @@ footer p {
 @media only screen and (max-width: 500px) {
   .forum-flex-left {
     -webkit-flex: 1 0 auto;
+    -ms-flex: 1 0 auto;
     flex: 1 0 auto; }
 
   .forum-flex-mid {
     -webkit-flex: 1 0 auto;
+    -ms-flex: 1 0 auto;
     flex: 1 0 auto; }
 
   .forum-flex-right {
     -webkit-flex: 1 0 auto;
+    -ms-flex: 1 0 auto;
     flex: 1 0 auto; }
 
   .post-body {
     -webkit-flex-direction: column;
+    -webkit-box-orient: vertical;
+    -ms-flex-direction: column;
     flex-direction: column; }
     .post-body .user-content {
       width: auto; }
@@ -647,6 +662,8 @@ footer p {
   .forum-subforum, .forum-topic {
     height: auto;
     -webkit-flex-direction: column;
+    -webkit-box-orient: vertical;
+    -ms-flex-direction: column;
     flex-direction: column; }
     .forum-subforum .subforum-latest, .forum-subforum .topic-latest, .forum-topic .subforum-latest, .forum-topic .topic-latest {
       margin-top: 14px; } }
